# testTcl

./: CMakeLists.txt  MainModel.cpp  MainModel.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  main.cpp  rapidjson
data/: cmpQ.tcl  configure.tcl  m.tcl  my_cell.tcl  my_timing.tcl  my_timing.tcl.orig
rapidjson/: reader.h
