cmake_minimum_required(VERSION 3.2)
set(CMAKE_C_COMPILER /depot/qsc/QSCV/bin/gcc) # need to in front of project
set(CMAKE_CXX_COMPILER /depot/qsc/QSCV/bin/g++)
project(tt)
file(GLOB SRCS *.cpp)
file(GLOB HSRCS *.h)
file(GLOB QRCS *.qrc)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(Qt5_DIR "/global/freeware/Linux/RHEL7/qt-5.9.6/5.9.6/gcc_64/lib/cmake/Qt5" CACHE PATH "Initial cache" FORCE)
# find_package(TCL REQUIRED)
find_library(TCL_LIB NAMES tcl-O HINTS "/global/sde_apps/tcl/v/prod_bf2/tcl/tcl8.6.11/lib-linux64")
find_library(ZLIB_LIB NAMES zlib-O HINTS "/global/libs/reusable_components/zlib/qscm-pic/dist/lib-linux64")
find_package(Qt5 COMPONENTS Core Widgets Charts DataVisualization REQUIRED)
# add_executable(testParser testParse.cpp parser.cpp)
#add_definitions (-DUSE_TCL_STUBS)
add_executable(tt ${SRCS} ${HSRCS} ${QRCS})
target_link_libraries(tt Qt5::Core Qt5::Widgets Qt5::Charts ${TCL_LIB} ${ZLIB_LIB} ${CMAKE_DL_LIBS})
target_include_directories(tt PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)
